exports[`Objectschema Editor > compares downloaded schema with the actual one #0`] =
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "type": "object",
  "properties": {
    "abbreviation": {
      "type": "string",
      "description": "The abbreviation for the EntityLayerSupertype."
    },
    "createdAt": {
      "type": "string",
      "description": "A timestamp acc. to RFC 3339 specifying when this entity was created."
    },
    "createdBy": {
      "type": "string",
      "description": "The username of the user who created this object."
    },
    "customAspects": {
      "type": "object",
      "title": "CustomAspect",
      "description": "A custom property which is determined by the requested entity schema - see '/schemas'",
      "properties": {
        "process_GeneralInformationTest": {
          "type": "object",
          "additionalProperties": false,
          "properties": {
            "id": {
              "type": "string",
              "title": "The UUID to identify the element",
              "format": "regex",
              "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
            },
            "applicableTo": {
              "type": "array",
              "items": {
                "type": "string"
              }
            },
            "domains": {
              "type": "array",
              "title": "The list of domains in which this element is present.",
              "description": "The ids of elements of the type domain.",
              "items": {
                "type": "object",
                "properties": {
                  "displayName": {
                    "type": "string",
                    "description": "A friendly human readable title of the referenced domain."
                  },
                  "targetUri": {
                    "type": "string",
                    "description": "The resource URL of the referenced domain."
                  }
                },
                "required": [
                  "targetUri"
                ]
              },
              "uniqueItems": true
            },
            "references": {
              "type": "array",
              "items": {
                "properties": {
                  "displayName": {
                    "type": "string",
                    "description": "A friendly human readable title of the referenced object."
                  },
                  "targetUri": {
                    "type": "string",
                    "description": "The resource URL of the referenced object."
                  }
                },
                "required": [
                  "targetUri"
                ]
              }
            },
            "attributes": {
              "type": "object",
              "properties": {
                "process_GeneralInformationTest_tagsTest": {
                  "type": "string"
                },
                "process_GeneralInformationTest_documentTest": {
                  "type": "boolean"
                }
              }
            }
          }
        },
        "process_AccessAuthorization": {
          "type": "object",
          "additionalProperties": false,
          "properties": {
            "id": {
              "type": "string",
              "title": "The UUID to identify the element",
              "format": "regex",
              "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
            },
            "applicableTo": {
              "type": "array",
              "items": {
                "type": "string"
              }
            },
            "domains": {
              "type": "array",
              "title": "The list of domains in which this element is present.",
              "description": "The ids of elements of the type domain.",
              "items": {
                "type": "object",
                "properties": {
                  "displayName": {
                    "type": "string",
                    "description": "A friendly human readable title of the referenced domain."
                  },
                  "targetUri": {
                    "type": "string",
                    "description": "The resource URL of the referenced domain."
                  }
                },
                "required": [
                  "targetUri"
                ]
              },
              "uniqueItems": true
            },
            "references": {
              "type": "array",
              "items": {
                "properties": {
                  "displayName": {
                    "type": "string",
                    "description": "A friendly human readable title of the referenced object."
                  },
                  "targetUri": {
                    "type": "string",
                    "description": "The resource URL of the referenced object."
                  }
                },
                "required": [
                  "targetUri"
                ]
              }
            },
            "attributes": {
              "type": "object",
              "properties": {
                "process_AccessAuthorization_a": {
                  "type": "string"
                },
                "process_AccessAuthorization_b": {
                  "type": "boolean"
                },
                "process_AccessAuthorization_c": {
                  "type": "number"
                },
                "process_AccessAuthorization_d": {
                  "type": "integer"
                },
                "process_AccessAuthorization_e": {
                  "enum": [
                    "a",
                    "b",
                    "c",
                    "d"
                  ]
                },
                "process_AccessAuthorization_f": {
                  "type": "array",
                  "items": {
                    "enum": [
                      "a",
                      "b",
                      "c",
                      "d"
                    ]
                  }
                }
              }
            }
          }
        },
        "process_InternalRecipient": {
          "type": "object",
          "additionalProperties": false,
          "properties": {
            "id": {
              "type": "string",
              "title": "The UUID to identify the element",
              "format": "regex",
              "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
            },
            "applicableTo": {
              "type": "array",
              "items": {
                "type": "string"
              }
            },
            "domains": {
              "type": "array",
              "title": "The list of domains in which this element is present.",
              "description": "The ids of elements of the type domain.",
              "items": {
                "type": "object",
                "properties": {
                  "displayName": {
                    "type": "string",
                    "description": "A friendly human readable title of the referenced domain."
                  },
                  "targetUri": {
                    "type": "string",
                    "description": "The resource URL of the referenced domain."
                  }
                },
                "required": [
                  "targetUri"
                ]
              },
              "uniqueItems": true
            },
            "references": {
              "type": "array",
              "items": {
                "properties": {
                  "displayName": {
                    "type": "string",
                    "description": "A friendly human readable title of the referenced object."
                  },
                  "targetUri": {
                    "type": "string",
                    "description": "The resource URL of the referenced object."
                  }
                },
                "required": [
                  "targetUri"
                ]
              }
            },
            "attributes": {
              "type": "object",
              "properties": {
                "process_InternalRecipient_InternalRecipient": {
                  "type": "boolean"
                }
              }
            }
          }
        },
        "process_ProcessingDetails": {
          "type": "object",
          "additionalProperties": false,
          "properties": {
            "id": {
              "type": "string",
              "title": "The UUID to identify the element",
              "format": "regex",
              "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
            },
            "applicableTo": {
              "type": "array",
              "items": {
                "type": "string"
              }
            },
            "domains": {
              "type": "array",
              "title": "The list of domains in which this element is present.",
              "description": "The ids of elements of the type domain.",
              "items": {
                "type": "object",
                "properties": {
                  "displayName": {
                    "type": "string",
                    "description": "A friendly human readable title of the referenced domain."
                  },
                  "targetUri": {
                    "type": "string",
                    "description": "The resource URL of the referenced domain."
                  }
                },
                "required": [
                  "targetUri"
                ]
              },
              "uniqueItems": true
            },
            "references": {
              "type": "array",
              "items": {
                "properties": {
                  "displayName": {
                    "type": "string",
                    "description": "A friendly human readable title of the referenced object."
                  },
                  "targetUri": {
                    "type": "string",
                    "description": "The resource URL of the referenced object."
                  }
                },
                "required": [
                  "targetUri"
                ]
              }
            },
            "attributes": {
              "type": "object",
              "properties": {
                "process_ProcessingDetails_intendedPurpose": {
                  "type": "string"
                },
                "process_ProcessingDetails_typeOfSurvey": {
                  "enum": [
                    "process_ProcessingDetails_typeOfSurvey_newsurvey",
                    "process_ProcessingDetails_typeOfSurvey_change"
                  ]
                },
                "process_ProcessingDetails_operationalStage": {
                  "enum": [
                    "process_ProcessingDetails_operationalStage_operation",
                    "process_ProcessingDetails_operationalStage_planning",
                    "process_ProcessingDetails_operationalStage_test",
                    "process_ProcessingDetails_operationalStage_rollout"
                  ]
                },
                "process_ProcessingDetails_comment": {
                  "type": "string"
                },
                "process_ProcessingDetails_surveyConductedOn": {
                  "type": "string",
                  "format": "date"
                }
              }
            }
          }
        },
        "process_InformationObligations": {
          "type": "object",
          "additionalProperties": false,
          "properties": {
            "id": {
              "type": "string",
              "title": "The UUID to identify the element",
              "format": "regex",
              "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
            },
            "applicableTo": {
              "type": "array",
              "items": {
                "type": "string"
              }
            },
            "domains": {
              "type": "array",
              "title": "The list of domains in which this element is present.",
              "description": "The ids of elements of the type domain.",
              "items": {
                "type": "object",
                "properties": {
                  "displayName": {
                    "type": "string",
                    "description": "A friendly human readable title of the referenced domain."
                  },
                  "targetUri": {
                    "type": "string",
                    "description": "The resource URL of the referenced domain."
                  }
                },
                "required": [
                  "targetUri"
                ]
              },
              "uniqueItems": true
            },
            "references": {
              "type": "array",
              "items": {
                "properties": {
                  "displayName": {
                    "type": "string",
                    "description": "A friendly human readable title of the referenced object."
                  },
                  "targetUri": {
                    "type": "string",
                    "description": "The resource URL of the referenced object."
                  }
                },
                "required": [
                  "targetUri"
                ]
              }
            },
            "attributes": {
              "type": "object",
              "properties": {
                "process_InformationObligations_informationObligations": {
                  "type": "string"
                },
                "process_InformationObligations_explanation": {
                  "type": "string"
                },
                "process_InformationObligations_document": {
                  "type": "string",
                  "format": "uri"
                }
              }
            }
          }
        },
        "process_ExternalRecipient": {
          "type": "object",
          "additionalProperties": false,
          "properties": {
            "id": {
              "type": "string",
              "title": "The UUID to identify the element",
              "format": "regex",
              "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
            },
            "applicableTo": {
              "type": "array",
              "items": {
                "type": "string"
              }
            },
            "domains": {
              "type": "array",
              "title": "The list of domains in which this element is present.",
              "description": "The ids of elements of the type domain.",
              "items": {
                "type": "object",
                "properties": {
                  "displayName": {
                    "type": "string",
                    "description": "A friendly human readable title of the referenced domain."
                  },
                  "targetUri": {
                    "type": "string",
                    "description": "The resource URL of the referenced domain."
                  }
                },
                "required": [
                  "targetUri"
                ]
              },
              "uniqueItems": true
            },
            "references": {
              "type": "array",
              "items": {
                "properties": {
                  "displayName": {
                    "type": "string",
                    "description": "A friendly human readable title of the referenced object."
                  },
                  "targetUri": {
                    "type": "string",
                    "description": "The resource URL of the referenced object."
                  }
                },
                "required": [
                  "targetUri"
                ]
              }
            },
            "attributes": {
              "type": "object",
              "properties": {
                "process_ExternalRecipient_ExternalRecipient": {
                  "type": "boolean"
                }
              }
            }
          }
        },
        "process_JointControllership": {
          "type": "object",
          "additionalProperties": false,
          "properties": {
            "id": {
              "type": "string",
              "title": "The UUID to identify the element",
              "format": "regex",
              "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
            },
            "applicableTo": {
              "type": "array",
              "items": {
                "type": "string"
              }
            },
            "domains": {
              "type": "array",
              "title": "The list of domains in which this element is present.",
              "description": "The ids of elements of the type domain.",
              "items": {
                "type": "object",
                "properties": {
                  "displayName": {
                    "type": "string",
                    "description": "A friendly human readable title of the referenced domain."
                  },
                  "targetUri": {
                    "type": "string",
                    "description": "The resource URL of the referenced domain."
                  }
                },
                "required": [
                  "targetUri"
                ]
              },
              "uniqueItems": true
            },
            "references": {
              "type": "array",
              "items": {
                "properties": {
                  "displayName": {
                    "type": "string",
                    "description": "A friendly human readable title of the referenced object."
                  },
                  "targetUri": {
                    "type": "string",
                    "description": "The resource URL of the referenced object."
                  }
                },
                "required": [
                  "targetUri"
                ]
              }
            },
            "attributes": {
              "type": "object",
              "properties": {
                "process_JointControllership_jointResponsiblePersons": {
                  "type": "boolean"
                }
              }
            }
          }
        }
      }
    },
    "description": {
      "type": "string",
      "description": "The description for the EntityLayerSupertype."
    },
    "domains": {
      "type": "array",
      "items": {
        "type": "object",
        "properties": {
          "displayName": {
            "type": "string",
            "description": "A friendly human readable title of the referenced domain."
          },
          "resourcesUri": {
            "type": "string"
          },
          "searchesUri": {
            "type": "string"
          },
          "targetUri": {
            "type": "string",
            "description": "The resource URL of the referenced domains."
          }
        },
        "required": [
          "targetUri"
        ],
        "description": "A reference to a domain"
      }
    },
    "id": {
      "type": "string",
      "description": "ID must be a valid UUID string following RFC 4122."
    },
    "links": {
      "type": "object",
      "title": "CustomLink",
      "description": "Custom relations which do not affect the behavior.",
      "properties": {
        "process_TypeOfDataProcessed": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "id": {
                "type": "string",
                "title": "The UUID to identify the element",
                "format": "regex",
                "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
              },
              "applicableTo": {
                "type": "array",
                "items": {
                  "type": "string"
                }
              },
              "domains": {
                "type": "array",
                "title": "The list of domains in which this element is present.",
                "description": "The ids of elements of the type domain.",
                "items": {
                  "type": "object",
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced domain."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced domain."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                },
                "uniqueItems": true
              },
              "references": {
                "type": "array",
                "items": {
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced object."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced object."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                }
              },
              "abbreviation": {
                "type": "string",
                "title": "Abbreviation",
                "description": "The abbreviation for this custom link."
              },
              "description": {
                "type": "string",
                "title": "Description",
                "description": "The name for this custom link."
              },
              "name": {
                "type": "string",
                "title": "Name",
                "description": "The name for this custom link."
              },
              "target": {
                "type": "object",
                "title": "id of the Asset",
                "properties": {
                  "targetUri": {
                    "type": "string",
                    "title": "The id of the target object."
                  },
                  "type": {
                    "enum": [
                      "asset"
                    ]
                  }
                }
              },
              "attributes": {
                "type": "object",
                "properties": {}
              }
            },
            "additionalProperties": false,
            "required": [
              "target"
            ]
          }
        },
        "process_AffectedParties": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "id": {
                "type": "string",
                "title": "The UUID to identify the element",
                "format": "regex",
                "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
              },
              "applicableTo": {
                "type": "array",
                "items": {
                  "type": "string"
                }
              },
              "domains": {
                "type": "array",
                "title": "The list of domains in which this element is present.",
                "description": "The ids of elements of the type domain.",
                "items": {
                  "type": "object",
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced domain."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced domain."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                },
                "uniqueItems": true
              },
              "references": {
                "type": "array",
                "items": {
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced object."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced object."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                }
              },
              "abbreviation": {
                "type": "string",
                "title": "Abbreviation",
                "description": "The abbreviation for this custom link."
              },
              "description": {
                "type": "string",
                "title": "Description",
                "description": "The name for this custom link."
              },
              "name": {
                "type": "string",
                "title": "Name",
                "description": "The name for this custom link."
              },
              "target": {
                "type": "object",
                "title": "id of the Person",
                "properties": {
                  "targetUri": {
                    "type": "string",
                    "title": "The id of the target object."
                  },
                  "type": {
                    "enum": [
                      "person"
                    ]
                  }
                }
              },
              "attributes": {
                "type": "object",
                "properties": {
                  "process_AffectedParties_supplementaryInformation": {
                    "type": "string"
                  }
                }
              }
            },
            "additionalProperties": false,
            "required": [
              "target"
            ]
          }
        },
        "process_LegalBasisTest": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "id": {
                "type": "string",
                "title": "The UUID to identify the element",
                "format": "regex",
                "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
              },
              "applicableTo": {
                "type": "array",
                "items": {
                  "type": "string"
                }
              },
              "domains": {
                "type": "array",
                "title": "The list of domains in which this element is present.",
                "description": "The ids of elements of the type domain.",
                "items": {
                  "type": "object",
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced domain."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced domain."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                },
                "uniqueItems": true
              },
              "references": {
                "type": "array",
                "items": {
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced object."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced object."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                }
              },
              "abbreviation": {
                "type": "string",
                "title": "Abbreviation",
                "description": "The abbreviation for this custom link."
              },
              "description": {
                "type": "string",
                "title": "Description",
                "description": "The name for this custom link."
              },
              "name": {
                "type": "string",
                "title": "Name",
                "description": "The name for this custom link."
              },
              "target": {
                "type": "object",
                "properties": {
                  "targetUri": {
                    "type": "string",
                    "title": "The id of the target object."
                  },
                  "type": {
                    "enum": [
                      "person"
                    ]
                  }
                }
              },
              "attributes": {
                "type": "object",
                "properties": {
                  "process_LegalBasisTest_explanationTest": {
                    "type": "string"
                  },
                  "process_LegalBasisTest_documentTest": {
                    "type": "boolean"
                  }
                }
              }
            },
            "additionalProperties": false,
            "required": [
              "target"
            ]
          }
        },
        "process_LegalBasisForProcessingSensitiveData": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "id": {
                "type": "string",
                "title": "The UUID to identify the element",
                "format": "regex",
                "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
              },
              "applicableTo": {
                "type": "array",
                "items": {
                  "type": "string"
                }
              },
              "domains": {
                "type": "array",
                "title": "The list of domains in which this element is present.",
                "description": "The ids of elements of the type domain.",
                "items": {
                  "type": "object",
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced domain."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced domain."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                },
                "uniqueItems": true
              },
              "references": {
                "type": "array",
                "items": {
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced object."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced object."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                }
              },
              "abbreviation": {
                "type": "string",
                "title": "Abbreviation",
                "description": "The abbreviation for this custom link."
              },
              "description": {
                "type": "string",
                "title": "Description",
                "description": "The name for this custom link."
              },
              "name": {
                "type": "string",
                "title": "Name",
                "description": "The name for this custom link."
              },
              "target": {
                "type": "object",
                "title": "id of the Control",
                "properties": {
                  "targetUri": {
                    "type": "string",
                    "title": "The id of the target object."
                  },
                  "type": {
                    "enum": [
                      "control"
                    ]
                  }
                }
              },
              "attributes": {
                "type": "object",
                "properties": {}
              }
            },
            "additionalProperties": false,
            "required": [
              "target"
            ]
          }
        },
        "process_InternalRecipientLink": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "id": {
                "type": "string",
                "title": "The UUID to identify the element",
                "format": "regex",
                "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
              },
              "applicableTo": {
                "type": "array",
                "items": {
                  "type": "string"
                }
              },
              "domains": {
                "type": "array",
                "title": "The list of domains in which this element is present.",
                "description": "The ids of elements of the type domain.",
                "items": {
                  "type": "object",
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced domain."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced domain."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                },
                "uniqueItems": true
              },
              "references": {
                "type": "array",
                "items": {
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced object."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced object."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                }
              },
              "abbreviation": {
                "type": "string",
                "title": "Abbreviation",
                "description": "The abbreviation for this custom link."
              },
              "description": {
                "type": "string",
                "title": "Description",
                "description": "The name for this custom link."
              },
              "name": {
                "type": "string",
                "title": "Name",
                "description": "The name for this custom link."
              },
              "target": {
                "type": "object",
                "properties": {
                  "targetUri": {
                    "type": "string",
                    "title": "The id of the target object."
                  },
                  "type": {
                    "enum": [
                      "person"
                    ]
                  }
                }
              },
              "attributes": {
                "type": "object",
                "properties": {
                  "process_InternalRecipientLink_a": {
                    "type": "string"
                  },
                  "process_InternalRecipientLink_b": {
                    "type": "boolean"
                  },
                  "process_InternalRecipientLink_c": {
                    "type": "number"
                  },
                  "process_InternalRecipientLink_d": {
                    "type": "integer"
                  },
                  "process_InternalRecipientLink_e": {
                    "enum": [
                      "a",
                      "b",
                      "c",
                      "d"
                    ]
                  },
                  "process_InternalRecipientLink_f": {
                    "type": "array",
                    "items": {
                      "enum": [
                        "a",
                        "b",
                        "c",
                        "d"
                      ]
                    }
                  }
                }
              }
            },
            "additionalProperties": false,
            "required": [
              "target"
            ]
          }
        },
        "process_DataCategories": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "id": {
                "type": "string",
                "title": "The UUID to identify the element",
                "format": "regex",
                "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
              },
              "applicableTo": {
                "type": "array",
                "items": {
                  "type": "string"
                }
              },
              "domains": {
                "type": "array",
                "title": "The list of domains in which this element is present.",
                "description": "The ids of elements of the type domain.",
                "items": {
                  "type": "object",
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced domain."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced domain."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                },
                "uniqueItems": true
              },
              "references": {
                "type": "array",
                "items": {
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced object."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced object."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                }
              },
              "abbreviation": {
                "type": "string",
                "title": "Abbreviation",
                "description": "The abbreviation for this custom link."
              },
              "description": {
                "type": "string",
                "title": "Description",
                "description": "The name for this custom link."
              },
              "name": {
                "type": "string",
                "title": "Name",
                "description": "The name for this custom link."
              },
              "target": {
                "type": "object",
                "title": "id of the Asset",
                "properties": {
                  "targetUri": {
                    "type": "string",
                    "title": "The id of the target object."
                  },
                  "type": {
                    "enum": [
                      "asset"
                    ]
                  }
                }
              },
              "attributes": {
                "type": "object",
                "properties": {
                  "process_DataCategories_dataOrigin": {
                    "enum": [
                      "process_DataCategories_dataOrigin_direct",
                      "process_DataCategories_dataOrigin_transmission",
                      "process_DataCategories_dataOrigin_other"
                    ]
                  },
                  "process_DataCategories_otherOrigin": {
                    "type": "string"
                  },
                  "process_DataCategories_comment": {
                    "type": "string"
                  }
                }
              }
            },
            "additionalProperties": false,
            "required": [
              "target"
            ]
          }
        },
        "process_TypeOfSensitiveData": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "id": {
                "type": "string",
                "title": "The UUID to identify the element",
                "format": "regex",
                "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
              },
              "applicableTo": {
                "type": "array",
                "items": {
                  "type": "string"
                }
              },
              "domains": {
                "type": "array",
                "title": "The list of domains in which this element is present.",
                "description": "The ids of elements of the type domain.",
                "items": {
                  "type": "object",
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced domain."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced domain."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                },
                "uniqueItems": true
              },
              "references": {
                "type": "array",
                "items": {
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced object."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced object."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                }
              },
              "abbreviation": {
                "type": "string",
                "title": "Abbreviation",
                "description": "The abbreviation for this custom link."
              },
              "description": {
                "type": "string",
                "title": "Description",
                "description": "The name for this custom link."
              },
              "name": {
                "type": "string",
                "title": "Name",
                "description": "The name for this custom link."
              },
              "target": {
                "type": "object",
                "title": "id of the Asset",
                "properties": {
                  "targetUri": {
                    "type": "string",
                    "title": "The id of the target object."
                  },
                  "type": {
                    "enum": [
                      "asset"
                    ]
                  }
                }
              },
              "attributes": {
                "type": "object",
                "properties": {}
              }
            },
            "additionalProperties": false,
            "required": [
              "target"
            ]
          }
        },
        "process_ExternalRecipientLink": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "id": {
                "type": "string",
                "title": "The UUID to identify the element",
                "format": "regex",
                "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
              },
              "applicableTo": {
                "type": "array",
                "items": {
                  "type": "string"
                }
              },
              "domains": {
                "type": "array",
                "title": "The list of domains in which this element is present.",
                "description": "The ids of elements of the type domain.",
                "items": {
                  "type": "object",
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced domain."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced domain."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                },
                "uniqueItems": true
              },
              "references": {
                "type": "array",
                "items": {
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced object."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced object."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                }
              },
              "abbreviation": {
                "type": "string",
                "title": "Abbreviation",
                "description": "The abbreviation for this custom link."
              },
              "description": {
                "type": "string",
                "title": "Description",
                "description": "The name for this custom link."
              },
              "name": {
                "type": "string",
                "title": "Name",
                "description": "The name for this custom link."
              },
              "target": {
                "type": "object",
                "title": "id of the Person",
                "properties": {
                  "targetUri": {
                    "type": "string",
                    "title": "The id of the target object."
                  },
                  "type": {
                    "enum": [
                      "person"
                    ]
                  }
                }
              },
              "attributes": {
                "type": "object",
                "properties": {
                  "process_ExternalRecipientLink_ExternalRecipient_purpose": {
                    "type": "string"
                  },
                  "process_ExternalRecipientLink_ExternalRecipient_dataprocessingagreement": {
                    "type": "boolean"
                  },
                  "process_ExternalRecipientLink_ExternalRecipient_thirdcountry": {
                    "type": "boolean"
                  },
                  "process_ExternalRecipientLink_ExternalRecipient_thirdcountryname": {
                    "type": "string",
                    "format": "uri"
                  },
                  "process_ExternalRecipientLink_ExternalRecipient_indication": {
                    "type": "string"
                  },
                  "process_ExternalRecipientLink_ExternalRecipient_explanation": {
                    "type": "string"
                  },
                  "process_ExternalRecipientLink_ExternalRecipient_document": {
                    "type": "string",
                    "format": "uri"
                  }
                }
              }
            },
            "additionalProperties": false,
            "required": [
              "target"
            ]
          }
        },
        "process_jointResponsiblePersons": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "id": {
                "type": "string",
                "title": "The UUID to identify the element",
                "format": "regex",
                "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
              },
              "applicableTo": {
                "type": "array",
                "items": {
                  "type": "string"
                }
              },
              "domains": {
                "type": "array",
                "title": "The list of domains in which this element is present.",
                "description": "The ids of elements of the type domain.",
                "items": {
                  "type": "object",
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced domain."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced domain."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                },
                "uniqueItems": true
              },
              "references": {
                "type": "array",
                "items": {
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced object."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced object."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                }
              },
              "abbreviation": {
                "type": "string",
                "title": "Abbreviation",
                "description": "The abbreviation for this custom link."
              },
              "description": {
                "type": "string",
                "title": "Description",
                "description": "The name for this custom link."
              },
              "name": {
                "type": "string",
                "title": "Name",
                "description": "The name for this custom link."
              },
              "target": {
                "type": "object",
                "title": "id of the Person",
                "properties": {
                  "targetUri": {
                    "type": "string",
                    "title": "The id of the target object."
                  },
                  "type": {
                    "enum": [
                      "person"
                    ]
                  }
                }
              },
              "attributes": {
                "type": "object",
                "properties": {}
              }
            },
            "additionalProperties": false,
            "required": [
              "target"
            ]
          }
        },
        "process_LegalBasisForProcessingInThirdCountry": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "id": {
                "type": "string",
                "title": "The UUID to identify the element",
                "format": "regex",
                "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
              },
              "applicableTo": {
                "type": "array",
                "items": {
                  "type": "string"
                }
              },
              "domains": {
                "type": "array",
                "title": "The list of domains in which this element is present.",
                "description": "The ids of elements of the type domain.",
                "items": {
                  "type": "object",
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced domain."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced domain."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                },
                "uniqueItems": true
              },
              "references": {
                "type": "array",
                "items": {
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced object."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced object."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                }
              },
              "abbreviation": {
                "type": "string",
                "title": "Abbreviation",
                "description": "The abbreviation for this custom link."
              },
              "description": {
                "type": "string",
                "title": "Description",
                "description": "The name for this custom link."
              },
              "name": {
                "type": "string",
                "title": "Name",
                "description": "The name for this custom link."
              },
              "target": {
                "type": "object",
                "title": "id of the Control",
                "properties": {
                  "targetUri": {
                    "type": "string",
                    "title": "The id of the target object."
                  },
                  "type": {
                    "enum": [
                      "control"
                    ]
                  }
                }
              },
              "attributes": {
                "type": "object",
                "properties": {}
              }
            },
            "additionalProperties": false,
            "required": [
              "target"
            ]
          }
        },
        "process_TypeOfDataTransmitted": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "id": {
                "type": "string",
                "title": "The UUID to identify the element",
                "format": "regex",
                "pattern": "[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}"
              },
              "applicableTo": {
                "type": "array",
                "items": {
                  "type": "string"
                }
              },
              "domains": {
                "type": "array",
                "title": "The list of domains in which this element is present.",
                "description": "The ids of elements of the type domain.",
                "items": {
                  "type": "object",
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced domain."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced domain."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                },
                "uniqueItems": true
              },
              "references": {
                "type": "array",
                "items": {
                  "properties": {
                    "displayName": {
                      "type": "string",
                      "description": "A friendly human readable title of the referenced object."
                    },
                    "targetUri": {
                      "type": "string",
                      "description": "The resource URL of the referenced object."
                    }
                  },
                  "required": [
                    "targetUri"
                  ]
                }
              },
              "abbreviation": {
                "type": "string",
                "title": "Abbreviation",
                "description": "The abbreviation for this custom link."
              },
              "description": {
                "type": "string",
                "title": "Description",
                "description": "The name for this custom link."
              },
              "name": {
                "type": "string",
                "title": "Name",
                "description": "The name for this custom link."
              },
              "target": {
                "type": "object",
                "title": "id of the Asset",
                "properties": {
                  "targetUri": {
                    "type": "string",
                    "title": "The id of the target object."
                  },
                  "type": {
                    "enum": [
                      "asset"
                    ]
                  }
                }
              },
              "attributes": {
                "type": "object",
                "properties": {}
              }
            },
            "additionalProperties": false,
            "required": [
              "target"
            ]
          }
        }
      }
    },
    "name": {
      "type": "string",
      "description": "The name for the EntityLayerSupertype."
    },
    "owner": {
      "type": "object",
      "properties": {
        "displayName": {
          "type": "string",
          "description": "A friendly human readable title of the referenced unit."
        },
        "resourcesUri": {
          "type": "string"
        },
        "searchesUri": {
          "type": "string"
        },
        "targetUri": {
          "type": "string",
          "description": "The resource URL of the referenced unit."
        }
      },
      "required": [
        "targetUri"
      ],
      "description": "A reference to the unit containing this entity."
    },
    "parts": {
      "type": "array",
      "items": {
        "type": "object",
        "properties": {
          "displayName": {
            "type": "string",
            "description": "A friendly human readable title of the referenced entity."
          },
          "resourcesUri": {
            "type": "string"
          },
          "searchesUri": {
            "type": "string"
          },
          "targetUri": {
            "type": "string",
            "description": "The resource URL of the referenced entity."
          }
        },
        "required": [
          "targetUri"
        ],
        "description": "A reference to an entity's part"
      }
    },
    "subType": {
      "type": "object",
      "title": "SubType",
      "description": "The sub type this entity has in each domain. Domain ID is key, sub type is value."
    },
    "type": {
      "type": "string",
      "description": "Entity type identifier"
    },
    "updatedAt": {
      "type": "string",
      "description": "A timestamp acc. to RFC 3339 specifying when this entity was created."
    },
    "updatedBy": {
      "type": "string",
      "description": "The username of the user who last updated this object."
    },
    "translations": {
      "de": {
        "process_GeneralInformationTest_tagsTest": "Test",
        "process_GeneralInformationTest_documentTest": "Test",
        "process_AccessAuthorization_a": "a",
        "process_AccessAuthorization_c": "c",
        "process_AccessAuthorization_e": "e",
        "a": "a",
        "b": "b",
        "c": "c",
        "d": "d",
        "process_TestAspectTwo_a": "a",
        "process_LegalBasisTest": "TestId",
        "process_LegalBasisTest_explanationTest": "Test",
        "process_LegalBasisTest_documentTest": "Test",
        "process_InternalRecipientLink": "id of the Person",
        "process_InternalRecipientLink_a": "a",
        "process_InternalRecipientLink_c": "c",
        "process_InternalRecipientLink_e": "e",
        "process_TestLinkTwo": "TestLinkTwo Beschreibung",
        "process_TestLinkTwo_a": "a"
      }
    }
  },
  "required": [
    "name",
    "owner"
  ],
  "title": "Process",
  "description": "Schema for Process"
};

exports[`Objectschema Editor > changes customAspect name, attribute names, description and types #0`] =
{
  "process_GeneralInformationTest_documentTest": {
    "type": "boolean"
  },
  "process_GeneralInformationTest_tagsTest": {
    "type": "string"
  }
};

exports[`Objectschema Editor > removes and adds aspect attributes #0`] =
{
  "process_AccessAuthorization_a": {
    "type": "string"
  },
  "process_AccessAuthorization_b": {
    "type": "boolean"
  },
  "process_AccessAuthorization_c": {
    "type": "number"
  },
  "process_AccessAuthorization_d": {
    "type": "integer"
  },
  "process_AccessAuthorization_e": {
    "enum": [
      "a",
      "b",
      "c",
      "d"
    ]
  },
  "process_AccessAuthorization_f": {
    "items": {
      "enum": [
        "a",
        "b",
        "c",
        "d"
      ]
    },
    "type": "array"
  }
};

exports[`Objectschema Editor > adds completely new aspect and removes it from dialog with delete button #0`] =
{
  "process_TestAspectTwo_a": {
    "type": "string"
  }
};

exports[`Objectschema Editor > changes link name, attribute names, description and types #0`] =
{
  "properties": {
    "targetUri": {
      "title": "The id of the target object.",
      "type": "string"
    },
    "type": {
      "enum": [
        "person"
      ]
    }
  },
  "type": "object"
};

exports[`Objectschema Editor > changes link name, attribute names, description and types #1`] =
{
  "process_LegalBasisTest_documentTest": {
    "type": "boolean"
  },
  "process_LegalBasisTest_explanationTest": {
    "type": "string"
  }
};

exports[`Objectschema Editor > removes and adds link attributes #0`] =
{
  "process_InternalRecipientLink_a": {
    "type": "string"
  },
  "process_InternalRecipientLink_b": {
    "type": "boolean"
  },
  "process_InternalRecipientLink_c": {
    "type": "number"
  },
  "process_InternalRecipientLink_d": {
    "type": "integer"
  },
  "process_InternalRecipientLink_e": {
    "enum": [
      "a",
      "b",
      "c",
      "d"
    ]
  },
  "process_InternalRecipientLink_f": {
    "items": {
      "enum": [
        "a",
        "b",
        "c",
        "d"
      ]
    },
    "type": "array"
  }
};

exports[`Objectschema Editor > adds completely new link and removes it from dialog with delete button #0`] =
{
  "process_TestLinkTwo_a": {
    "type": "string"
  }
};
